--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-image-uploader": "^1.0.0",
     "react-router-dom": "^6.22.1",
+    "react-webcam": "^7.2.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
