--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.50.1",
     "react-image-uploader": "^1.0.0",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.4",
     "react-webcam": "^7.2.0",
     "sort-by": "^1.2.0"
   },
