--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_LOCAL_API_URL=http://localhost:3000
-VITE_PRODUCTION_API_URL=https://okami-api.onrender.com
+VITE_API_URL=https://okami-api.onrender.com
