--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-image-uploader": "^1.0.0",
