--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^7.1.0",
+    "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
