--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
-    "@mui/x-charts": "^7.1.1",
     "@mui/x-data-grid": "^7.1.0",
     "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
@@ -26,6 +26,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
