--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-image-uploader": "^1.0.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "react-webcam": "^7.2.0",
