--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^7.1.0",
     "@mui/x-date-pickers": "^7.1.0",
+    "@react-input/mask": "^2.0.4",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
@@ -32,8 +33,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
     "react-image-uploader": "^1.0.0",
-    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.22.1",
+    "react-select": "^5.9.0",
     "react-toastify": "^10.0.4",
     "react-webcam": "^7.2.0",
     "sort-by": "^1.2.0",
