--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
     "react-image-uploader": "^1.0.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.22.1",
     "react-select": "^5.9.0",
     "react-toastify": "^10.0.4",
